--- a/demo2/css/demo1.css
+++ b/demo2/css/demo1.css
@@ -527,7 +527,7 @@ and (min-width : 1824px) {
 
 
 	#story-intel #text21{
-		margin: 4em 0 0 0 !important;
+		margin: 6em 0 0 0 !important;
 	}
 	#story-intel #imageleft2 {
 		left: -34% !important;
@@ -1586,7 +1586,7 @@ and (min-width : 1824px) {
 	text-align: center;
 	bottom: 0.6em;
 	margin: auto;
-	width: 20%;
+	width: 25%;
 	height: auto;
 	left: 40%;
 }
@@ -1740,7 +1740,7 @@ strong{
 	text-align: center;
 	bottom: 1.5em;
 	margin: auto;
-	width: 20%;
+	width: 25%;
 	height: auto;
 	left: 40%;
 }
@@ -2552,7 +2552,7 @@ ul#nav span {
 	position: absolute;
 	margin: -1.5em 0 0 34em;
 	z-index: 1;
-
+	overflow: hidden;
 }
 .img-groups{
 	position: absolute;
