--- a/demo2/Parallax/css/reset.css
+++ b/demo2/Parallax/css/reset.css
@@ -72,5 +72,5 @@ input,button,textarea,select{
 }
 
 input {
-        background : -webkit-gradient(linear, left top, left bottom, from(#FFF), to(#FFF));
+        background : -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#f4f4f4));
 }
