--- a/demo2/css/demo1.css
+++ b/demo2/css/demo1.css
@@ -1067,8 +1067,8 @@ and (min-width : 1920px) {
 	}
 
 	#story-intel #imageright2 {
-		left: 39% !important;
-		top: 51% !important;
+        left: 39% !important;
+        top: 51% !important;
 	}
 
 	#story-intel #imageright2 img {
@@ -1128,10 +1128,10 @@ and (min-width : 1920px) {
 		margin: 2em 0 0 -2em;
 	}
 	#zajavka2{
-		margin: 2em 0 0 0 !important;
+        margin: 0 auto !important;
 	}
 	#zajavka2 input {
-		height: 6em !important;
+		height: 7em !important;
 
 	}
 	.footerslide2{
@@ -1150,9 +1150,7 @@ and (min-width : 1920px) {
 		width: 109% !important;
 		margin: 0.7em 0 0 0 !important;
 	}
-	#story-william .text33{
 
-	}
 	#story-william .text33 p{
 		font: italic 1em 'MyriadProBold' !important;
 		margin: -1.5em 0 1.5em 0 !important;
@@ -1160,6 +1158,7 @@ and (min-width : 1920px) {
 
 	#story-william .meroprijat .item{
 		margin: -1em 0 3em 0.3em !important;
+        width: 24%;
 	}
 	#story-william .meroprijat .item-text p{
 		font: 0.9em 'MyriadProRegular' !important;
@@ -1169,10 +1168,10 @@ and (min-width : 1920px) {
 		margin: 3em 0 0 0 !important;
 	}
 	#zajavka3{
-		margin: 2em 0 0 0 !important;
+		margin: 0 auto !important;
 	}
 	#zajavka3 input {
-		height: 6em !important;
+		height: 7em !important;
 
 	}
 	.footerslide3{
@@ -1194,26 +1193,26 @@ and (min-width : 1920px) {
         margin: 0 0 -2.6em 0 !important;
     }
     #story-bing .work .row .elements {
-        left: 0.9em !important;
-        width: 57% !important;
-        top: -2.3em;
+        left: 4.9em !important;
+        width: 60em !important;
+        top: -2em !important;
     }
     #story-bing .work .item {
-        width: 12.5em !important;
+        width: 16em !important;
     }
     #story-bing .work .row .row-img-circle {
         margin: 0 0 0 -1em !important;
     }
 
     #story-bing .work .row .row-img-circle img{
-        width: 75%;
+        width: 100%;
     }
     #story-bing .work .row .row-img-arrow {
-        top: 2.3em !important;
-        right: 2.8em;
+        top: 3em !important;
+        right: 0;
     }
     #story-bing .work .row .row-img-arrow img{
-        width: 70%;
+        width: 100%;
     }
     #story-bing .work .item-img img{
         width: 2em;
@@ -1221,7 +1220,6 @@ and (min-width : 1920px) {
     }
     #story-bing .work .item .item-num p {
         margin: 0.1em 0 0.5em 0.7em !important;
-        font: 0.8em 'MyriadProBold' !important;
     }
     #story-bing .work .item2{
         margin: 0 0 0 -0.35em !important;
@@ -1233,20 +1231,20 @@ and (min-width : 1920px) {
         margin: 0 0 0 -0.35em !important;
     }
     #story-bing .work .row3 .elements {
-        left: 0.7em !important;
-        width: 57% !important;
-        top: -3em;
+        left: 4.6em !important;
+        width: 60em !important;
+        top: -2.7em !important;
     }
     #story-bing .work .item11{
         width: 15% !important;
         margin: 0 3em 0 -0.35em !important;
     }
     #story-bing .work .row-img-key {
-        right: 2.5em !important;
+        right: -3.7em !important;
         top: 0 !important;
     }
     #story-bing .work .row-img-key img{
-        width: 70%;
+        width: 100%;
     }
     #zajavka4 {
         width: 50% !important;
@@ -1256,7 +1254,7 @@ and (min-width : 1920px) {
     #zajavka4 input {
         background-size: 100% !important;
         width: 70% !important;
-        height: 5em !important;
+        height: 6em !important;
     }
     .footerslide4{
         bottom: 1.5em !important;
@@ -1265,12 +1263,15 @@ and (min-width : 1920px) {
         z-index: 5 !important;
     }
 
+    #story-five .story {
+
+        font-size: 100%;
+    }
 
 	#story-five .text51 {
 		margin: 5em 0 0 0 !important;
 	}
 	#story-five .get .item .item-text p {
-		font: 0.8em 'MyriadProRegular' !important;
 		margin: -0.5em 0 0 0 !important;
 	}
 	#story-five .text52 {
@@ -1278,7 +1279,6 @@ and (min-width : 1920px) {
 		top: 33em !important;
 	}
 	#story-five .text52 p {
-		font: 2.9em 'HeliosCondBold' !important;
 	}
 	#zajavka5 {
 		width: 70% !important;
@@ -1299,6 +1299,10 @@ and (min-width : 1920px) {
 		z-index: 5 !important;
 	}
 
+    #story-six .story {
+
+        font-size: 100%;
+    }
 	#story-six .paket{
 		width: 109% !important;
 		margin: 1em 0 0 0 !important;
@@ -1311,19 +1315,19 @@ and (min-width : 1920px) {
 		margin: 4em 2em 0 0 !important;
 	}
 	#story-six .paket .item .item-titul p{
-		font: 1.1em 'HeliosCondBold' !important;
+
 	}
 	#story-six .paket .item .item-titul p span{
-		font: 1.4em 'HeliosCondBold' !important;
+
 	}
 	#story-six .paket .item .item-text1{
 		margin:0.5em 0 0 2em !important;
 	}
 	#story-six .paket .item .item-text1 p{
-		font: 0.9em 'HeliosCondBold' !important;
+
 	}
 	#story-six .paket .item .item-text2{
-		font: 0.7em/1.45em 'HeliosCondBold' !important;
+
 		margin: -1.5em 0 0 2.8em !important;
 	}
 	#story-six #text63{
@@ -1350,13 +1354,16 @@ and (min-width : 1920px) {
 
 
 
+    #story-seven .story {
 
+        font-size: 100%;
+    }
 	#story-seven .text72{
 		width: 110% !important;
 		margin: 1em 0 0 0 !important;
 	}
 	#story-seven .text72 p{
-		font: 1.3em 'HeliosCondBold' !important;
+
 	}
 
 	#story-seven .sliderfone .text73{
@@ -1441,6 +1448,12 @@ and (min-width : 1920px) {
 		z-index: 10;
 
 	}
+
+
+    #story-foo .story {
+
+        font-size: 100%;
+    }
 	#story-foo .text81 {
 		margin: 2em 0 0 0 !important;
 	}
@@ -1481,26 +1494,26 @@ and (min-width : 1920px) {
 		width: 110% !important;
 	}
 	#story-foo .text84 p {
-		font: 1.1em 'HeliosCondBold' !important;
+
 	}
 	#story-foo .text85 {
 		margin: 2.5em 0 0 0;
 	}
 	#story-foo .text86 p {
-		font: 1.4em 'HeliosCondBold' !important;
+
 	}
 	#story-foo #foomidlepart .column {
 		margin: 1em 0 0 0 !important;
 	}
 	#story-foo #foomidlepart .item-text1 p {
-		font: 1em 'MyriadProBold' !important;
+
 	}
 	#story-foo #foomidlepart .item-text2 p {
-		font: italic 0.8em 'MyriadProRegular' !important;
+
 	}
 	#story-foo #foomidlepart .socialnet {
 		width: 60% !important;
-		font-size: 1em !important;
+
 	}
 	#story-foo #foobottompart .copyr {
 		margin: 1.8em 10em 0 0 !important;
