--- a/demo2/css/demo1.css
+++ b/demo2/css/demo1.css
@@ -66,11 +66,11 @@ and (min-width : 1024px) {
 		left: 16% !important;
 	}
 	#story-header .glass {
-		top: 515% !important;
+        top: 483% !important;
 	}
 
 	#story-header .glass img {
-		left: 68% !important;
+        left: 53% !important;
 	}
 
 	#story-header .text12 {
@@ -97,7 +97,7 @@ and (min-width : 1024px) {
         width: 85% !important;
     }
 	#story-intel #text27 {
-		top:-1.2em;
+        margin: 1em 0 14em 0;
 	}
 	#story-intel #imageright2 {
         left: 39% !important;
@@ -113,7 +113,7 @@ and (min-width : 1024px) {
         top: 92% !important;
     }
     #story-intel #imageleftarrow2 {
-        top: 145% !important;
+        top: 150% !important;
     }
     #story-intel .text26 p {
         font: 0.6em/1.7em 'HeliosCondBold' !important;
@@ -129,6 +129,7 @@ and (min-width : 1024px) {
     .footerslide2 {
         bottom: 0.4em !important;
         width: 26% !important;
+        left: 37% !important;
     }
 
 
@@ -144,7 +145,7 @@ and (min-width : 1024px) {
 		width: 75%;
 	}
 	#story-william #text31 {
-		margin: 0 auto !important;
+		margin: 4.5em  0 0 0  !important;
 	}
 	#story-william .text34 img{
 		margin: 2em 0 0 0;
@@ -167,6 +168,7 @@ and (min-width : 1024px) {
     #story-bing img{
         width: 100%;
     }
+
     #story-bing .text41 {
         margin: 1em 0 0 0 !important;
     }
@@ -249,12 +251,15 @@ and (min-width : 1024px) {
 	#story-five .story {
         width: 45%;
         padding-right: 0px;
-        font-size: 54%;
+        font-size: 66%;
 	}
 
 	#story-five img{
 		width: 100%;
 	}
+    #story-five .text51 {
+        margin: 5em 0 0 0 !important;
+    }
 	#story-five .man-img {
 		width: 55%;
 		right: 25% !important;
@@ -274,19 +279,20 @@ and (min-width : 1024px) {
 
 	}
 	#story-five .text52 {
-		width: 100% !important;
-		top: 38em !important;
+        width: 101% !important;
+        top: 30em !important;
+        left: -10em;
 	}
 
 	#zajavka5 {
 		width: 70% !important;
-		margin: 9em 0 0 12em !important;
+		margin: 9em 0 0 9em !important;
 		top: 10em !important;
 	}
 	#zajavka5 input {
 		width: 60% !important;
 		background-size: 100% !important;
-		height: 8em !important;
+		height: 6.5em !important;
 		margin: 0 auto !important;
 	}
     .footerslide5{
@@ -348,9 +354,9 @@ and (min-width : 1024px) {
 
 
 	#story-seven .story {
-        width: 45%;
+        width: 50%;
         padding-right: 0px;
-        font-size: 79%;
+        font-size: 92%;
 	}
 
 	#story-seven img{
@@ -365,10 +371,10 @@ and (min-width : 1024px) {
 		width: 50%;
 	}
 	.simpslider {
-        margin: 0.7em 0 0 0.5em !important;
+        margin: 0.65em 0 0 0.5em !important;
 	}
     div#pre-slider {
-        bottom: 3.25em !important;
+        bottom: 3em !important;
         right: 1em !important;
     }
 	#slider-controls li.active {
@@ -383,14 +389,18 @@ and (min-width : 1024px) {
         bottom: -6em !important;
     }
     .footerslide7{
-        right: 2em !important;
-        bottom: -6em !important;
+        bottom: 1em !important;
+        width: 26% !important;
+        margin: 0 auto !important;
+        z-index: 5;
+
     }
 
 
 	#story-foo .story {
-		width: 50%;
+		width: 60%;
 		padding-right: 0px;
+        font-size: 66%;
 	}
 	#story-foo .text81 {
 		margin: 0 auto !important;
@@ -399,28 +409,26 @@ and (min-width : 1024px) {
 		width: 20%;
 	}
 
-	#story-foo .text82 p {
-		font: 0.78em 'HeliosCondBold' !important;
-	}
 	#story-foo .arrowfoo {
-		margin: -2.2em 0 0 15em !important;
-
+        margin: -3.2em 0 0 22em !important;
 	}
 	#story-foo .arrowfoo img{
 		width: 80%;
 
 	}
-
+    #vk_groups {
+        margin: -4.5em 0 0 36em !important;
+    }
 
     .img-groups .ph {
-    margin: -3.5em 0 0 1em !important;
-        right: -35.3em !important;
+        margin: -7.5em 0 0 0 !important;
+        right: -38em !important;
     }
 
 
     .img-groups .hn {
-        left: 42.85em;
-        margin: -2.5em 0 0 0 !important;
+        left: 49.4em;
+        margin: -6em 0 0 0 !important;
     }
     .img-groups .ph img{
      width: 69% !important;
@@ -439,18 +447,14 @@ and (min-width : 1024px) {
 	#story-foo .text84 {
 		margin: 0 auto !important;
 	}
-	#story-foo .text84 p {
-		font: 0.8em 'HeliosCondBold' !important;
-	}
+
 	#story-foo .text85 {
 		margin: -0.5em 0 0 0;
 	}
 	#story-foo .text85 img {
 		width: 37% !important;
 	}
-	#story-foo .text86 p {
-		font: 1.1em 'HeliosCondBold' !important;
-	}
+
 	#story-foo #foomidlepart .column {
 		margin: 0 auto !important;
 	}
@@ -466,14 +470,20 @@ and (min-width : 1024px) {
 		width: 70%;
 	}
 	#story-foo #foomidlepart .socialnet {
-		width: 50% !important;
-		margin: 0  auto ;
+        width: 60% !important;
+        margin: 0.5em 0 2.8em -24em !important;
 	}
     #story-foo #foomidlepart .fb-like {
-        margin: 0 0 0 -8.5em !important;
+        margin: 0 0 0 -7.5em !important;
     }
     #story-foo #foomidlepart .socialnet span.innersocial {
-        margin: 0 4em 0 0!important;
+        margin: 0 3em 0 0!important;
+    }
+    #story-foo #foobottom {
+        font-size: 66%;
+    }
+    #story-foo #foomidlepart .share42init {
+        margin: -1.5em -4em 0 38em !important;
     }
 	#story-foo #foobottompart .copyr{
 		margin: 1.3em 7em 0 0 !important;
@@ -483,6 +493,11 @@ and (min-width : 1024px) {
 		width: 20%;
 
 	}
+    .footerslide8 {
+        margin: 1em 0 12em !important;
+        top: -1.5em !important;
+        z-index: 5;
+    }
 }
 
 
@@ -532,11 +547,11 @@ and (min-width : 1366px) {
         left: 16% !important;
     }
     #story-header .glass {
-        top: 515% !important;
+        top: 530% !important;
     }
 
     #story-header .glass img {
-        left: 68% !important;
+        left: 70% !important;
     }
 
     #story-header .text12 {
@@ -596,6 +611,7 @@ and (min-width : 1366px) {
     .footerslide2 {
         bottom: 0.6em !important;
         width: 20% !important;
+        left: 40% !important;
     }
 
 
@@ -720,7 +736,7 @@ and (min-width : 1366px) {
     #story-five .story {
         width: 45%;
         padding-right: 0px;
-        font-size: 68%;
+        font-size: 79%;
     }
 
     #story-five img{
@@ -746,13 +762,13 @@ and (min-width : 1366px) {
     }
     #story-five .text52 {
         width: 100% !important;
-        top: 35em !important;
+        top: 26em !important;
     }
 
     #zajavka5 {
         width: 70% !important;
-        margin: 9em 0 0 8em !important;
-        top: 7em !important;
+        margin: 0 0 0 7em !important;
+        top: 11em !important;
     }
     #zajavka5 input {
         width: 60% !important;
@@ -763,8 +779,8 @@ and (min-width : 1366px) {
     .footerslide5{
         bottom: 1.2em !important;
         width: 20% !important;
-        margin: 0 auto !important;
         z-index: 5 !important;
+        left: 40% !important;
     }
 
 
@@ -849,12 +865,19 @@ and (min-width : 1366px) {
     #story-seven .sliderfone .bushfront {
         right: 4em !important;
     }
+    .footerslide7{
+        bottom: 1em !important;
+        width: 20% !important;
+        z-index: 5 !important;
+        left: 40% !important;
+    }
 
 
 
     #story-foo .story {
         width: 50%;
         padding-right: 0px;
+        font-size: 100%;
     }
     #story-foo .text81 {
         margin: 0 auto !important;
@@ -929,15 +952,29 @@ and (min-width : 1366px) {
     #story-foo #foomidlepart .item-img img{
         width: 70%;
     }
+    #vk_groups {
+        margin: -1.8em 0 0 34em !important;
+    }
+    #story-foo #foobottom {
+        font-size: 100%;
+    }
+
     #story-foo #foomidlepart .socialnet {
-        width: 50% !important;
-        margin: 0  auto ;
+        width: 75% !important;
+        margin: 0.5em 0 0 -21em !important;
     }
     #story-foo #foomidlepart .fb-like {
-        margin: 0 0 0 -8.5em !important;
+        margin: 0 0 0 -5em !important;
     }
     #story-foo #foomidlepart .socialnet span.innersocial {
-        margin: 0 4em 0 0!important;
+        margin: 0 auto !important;
+    }
+    #story-foo #foomidlepart .share42init {
+        margin: -1.5em 0 0 39.5em !important;
+    }
+    .footerslide8 {
+        margin: 0 0 12em !important;
+        top: 0.5em !important;
     }
     #story-foo #foobottompart .copyr{
         margin: 1.3em 7em 0 0 !important;
@@ -1388,7 +1425,7 @@ and (min-width : 1920px) {
 		width: 70% !important;
 		position: absolute;
 		padding: 0;
-		margin: 4.5em 0 0 8em !important;
+		margin: 4.5em 0 0 6em !important;
 	}
 
 
@@ -1396,7 +1433,7 @@ and (min-width : 1920px) {
 		background: url("../images/slide7/button7.png") no-repeat scroll center top transparent;
 		background-size: 100%;
 		width: 70% !important;
-		height: 7em !important;
+		height: 6em !important;
 		border: none;
 		color: transparent;
 		cursor: pointer;
@@ -1900,7 +1937,7 @@ and (min-width : 1920px) {
 }
 #story-intel #text22{
 	position: relative;
-	margin: 0 0 3em 0;
+	margin: 4em 0 3em 0;
 	top:1em;
 }
 #story-intel #text22 img{
