--- a/demo2/css/demo1.css
+++ b/demo2/css/demo1.css
@@ -1782,6 +1782,7 @@ and (min-width : 1920px) {
 	position: absolute;
 	top: 173%;
 	left: 0;
+    opacity: 0;
    /* animation: parashut 4s 1;
     -ms-animation: parashut 4s 1;
 	-webkit-animation: parashut 4s 1;
@@ -1802,7 +1803,7 @@ and (min-width : 1920px) {
 	position: absolute;
 	top: 475%;
 	left: 0;
-
+opacity: 0;
 }
 
 #story-header .glass img {
@@ -2057,9 +2058,10 @@ and (min-width : 1920px) {
 	display: block;
 	top: 0;
 	left: 0;
-	animation:imageslide2 5s 1;
+    opacity: 0;
+	/*animation:imageslide2 5s 1;
 	-webkit-animation: imageslide2 5s 1;
-	-moz-animation: imageslide2 5s 1;
+	-moz-animation: imageslide2 5s 1;*/
 }
 #story-intel #imageleftarrow2 {
 	position: absolute;
@@ -2076,9 +2078,10 @@ and (min-width : 1920px) {
 	display: block;
 	top: 0;
 	left: 0;
-	animation:arrow 8s 1;
+    opacity: 0;
+	/*animation:arrow 8s 1;
 	-webkit-animation: arrow 8s 1;
-	-moz-animation: arrow 8s 1;
+	-moz-animation: arrow 8s 1;*/
 
 }
 
@@ -2096,9 +2099,10 @@ and (min-width : 1920px) {
 	display: block;
 	top: 0;
 	left: 28%;
-	animation:imageslide2 8s 1;
+    opacity: 0;
+	/*animation:imageslide2 8s 1;
 	-webkit-animation: imageslide2 8s 1;
-	-moz-animation: imageslide2 8s 1;
+	-moz-animation: imageslide2 8s 1;*/
 }
 #story-intel #imagerightarrow2 {
 	position: absolute;
@@ -2115,9 +2119,10 @@ and (min-width : 1920px) {
 	display: block;
 	top: 0;
 	left: 0;
-	animation:arrow 5s 1;
+    opacity: 0;
+	/*animation:arrow 5s 1;
 	-webkit-animation: arrow 5s 1;
-	-moz-animation: arrow 5s 1;
+	-moz-animation: arrow 5s 1;*/
 }
 .footerslide2{
     cursor: pointer;
@@ -3185,7 +3190,7 @@ ul#nav span {
 	color: #000000;
 
 }
-.box-modal .input-prepend1{
+#small-modal .input-prepend1{
 	float: left;
 	text-align: left;
 	width: 100%;
@@ -3271,4 +3276,35 @@ span.red{
 	margin: 23px 0 0 12px;
 	border: solid 1px #4f5c67;
 	box-shadow: inset 0 0 3px rgba(0,0,0,0.4);
+}
+
+.box-modal .toppopup1 {
+    position: absolute;
+    right: 0;
+    top: -24%;
+    width: 100%;
+}
+.box-modal .bottompopup1 {
+    bottom: 0;
+    position: absolute;
+    right: 0;
+    top: 67%;
+    width: 100%;
+    z-index: 0;
+}
+.box-modal .lablemod1 {
+    float: left;
+    margin: 0.5em 0 0 0;
+}
+
+ #small-modal1 input.feedback {
+    background: url("../images/pop-up/button.png") no-repeat scroll left center rgba(0, 0, 0, 0);
+    border: medium none;
+    color: transparent;
+    cursor: pointer;
+    float: right;
+    margin: 57px 0 0;
+    padding: 10px 82px 1px 0;
+    position: relative;
+    z-index: 2;
 }
