--- a/demo2/css/demo1.css
+++ b/demo2/css/demo1.css
@@ -126,6 +126,11 @@ and (min-width : 1024px) {
         height: 3em !important;
         top: 0em !important;
     }
+    #zajavka2 input:hover {
+        width: 29% !important;
+        height: 2.7em !important;
+        top: 0em !important;
+    }
     .footerslide2 {
         bottom: 0.4em !important;
         width: 26% !important;
@@ -237,9 +242,14 @@ and (min-width : 1024px) {
         margin: 0 0 0 11.5em !important;
     }
     #zajavka4 input {
+           background-size: 100% !important;
+           width: 60% !important;
+           height: 4em !important;
+       }
+    #zajavka4 input:hover {
         background-size: 100% !important;
-        width: 60% !important;
-        height: 4em !important;
+        width: 55% !important;
+        height: 3.5em !important;
     }
     .footerslide4{
         bottom: 1em !important;
@@ -295,6 +305,10 @@ and (min-width : 1024px) {
 		height: 6.5em !important;
 		margin: 0 auto !important;
 	}
+    #zajavka5 input:hover {
+        width: 55% !important;
+        height: 5.5em !important;
+    }
     .footerslide5{
         bottom: 1em !important;
         width: 26% !important;
@@ -346,6 +360,10 @@ and (min-width : 1024px) {
 		height: 8em !important;
 		background-size: 100% !important;
 	}
+    #zajavka6 input:hover {
+        width: 55% !important;
+        height: 6.5em !important;
+    }
     .footerslide6{
         bottom: 1em !important;
         width: 26% !important;
@@ -608,6 +626,11 @@ and (min-width : 1366px) {
         height: 5em !important;
         top: 1em !important;
     }
+    #zajavka2 input:hover {
+        width: 35% !important;
+        height: 4em !important;
+        top: 1em !important;
+    }
     .footerslide2 {
         bottom: 0.6em !important;
         width: 20% !important;
@@ -637,6 +660,10 @@ and (min-width : 1366px) {
     }
     #zajavka3 input {
         height: 5em !important;
+    }
+    #zajavka3 input:hover {
+        height: 4.5em !important;
+        width: 40%;
     }
     .footerslide3 {
         width: 20% !important;
@@ -723,6 +750,11 @@ and (min-width : 1366px) {
         width: 70% !important;
         height: 5em !important;
     }
+    #zajavka4 input:hover {
+        background-size: 100% !important;
+        width: 60% !important;
+        height: 4.5em !important;
+    }
     .footerslide4{
         bottom: 1.5em !important;
         width: 20% !important;
@@ -776,6 +808,12 @@ and (min-width : 1366px) {
         height: 8em !important;
         margin: 0 auto !important;
     }
+    #zajavka5 input:hover {
+        width: 55% !important;
+        background-size: 100% !important;
+        height: 6.5em !important;
+        margin: 0 auto !important;
+    }
     .footerslide5{
         bottom: 1.2em !important;
         width: 20% !important;
@@ -818,8 +856,13 @@ and (min-width : 1366px) {
         top: 0 !important;
     }
     #zajavka6 input {
-        width: 62% !important;
-        height: 7.2em !important;
+            width: 62% !important;
+            height: 7.2em !important;
+            background-size: 100% !important;
+        }
+    #zajavka6 input:hover {
+        width: 52% !important;
+        height: 6em !important;
         background-size: 100% !important;
     }
     .footerslide6{
@@ -1277,6 +1320,10 @@ and (min-width : 1920px) {
         width: 70% !important;
         height: 6.5em !important;
     }
+    #zajavka4 input:hover {
+        width: 60% !important;
+        height: 5.5em !important;
+    }
     .footerslide4{
         bottom: 1.5em !important;
         width: 15% !important;
@@ -1312,7 +1359,10 @@ and (min-width : 1920px) {
 		height: 9em !important;
 		margin: 0 auto !important;
 	}
-
+    #zajavka5 input:hover {
+        width: 60% !important;
+        height: 8em !important;
+    }
 	.footerslide5 {
 		bottom: 1.2em !important;
         width: 15% !important;
@@ -1440,6 +1490,10 @@ and (min-width : 1920px) {
 		margin: 0 auto;
 		position: relative;
 	}
+    #zajavka7 input {
+        width: 60% !important;
+        height: 5em !important;
+    }
 	.footerslide7{
         bottom: 2.5em !important;
         width: 15% !important;
@@ -1834,18 +1888,25 @@ opacity: 0;
 	text-align: left;
 	z-index: 20;
 	position: relative;
+
 }
 .zajavka input {
 	background: url("../images/slide1/buttonzajavka.png") no-repeat scroll center top transparent;
+    background-size: 100%;
 	border: none;
 	color: transparent;
 	cursor: pointer;
 	margin: 0 auto;
 	z-index: 20;
 	width: 15em;
-	height: 4em;
+	height: 3.5em;
 }
-
+.zajavka input:hover {
+    background: url("../images/slide1/buttonzajavka.png") no-repeat scroll center top transparent;
+    background-size: 100%;
+    width: 12em;
+    height: 3em;
+}
 #story-header {
 	color: #666;
 }
@@ -2276,6 +2337,10 @@ strong{
     top: 0;
     left: 0;
     padding: 0;
+}
+#zajavka3 input:hover {
+    width: 35%;
+    height: 4em;
 }
 .footerslide3{
 	cursor: pointer;
@@ -2857,6 +2922,10 @@ div#pre-slider {
 	position: relative;
 
 }
+#zajavka7 input:hover {
+    width: 65%;
+    height: 4.5em;
+}
 .footerslide7{
 	cursor: pointer;
 	position: absolute;
@@ -2983,6 +3052,9 @@ div#pre-slider {
 	padding: 0.3em;
 
 }
+#story-foo #foomidlepart #call input:hover {
+  width: 40%;
+}
 
 #story-foo #foomidlepart #ask input{
 	background: url("../images/slide8/ask.png") no-repeat scroll center top / 100% auto transparent;
@@ -2990,6 +3062,9 @@ div#pre-slider {
 	color: transparent;
 	cursor: pointer;
 	padding: 0.3em;
+}
+#story-foo #foomidlepart #ask input:hover{
+    width: 40%;
 }
 #story-foo #foomidlepart .socialnet{
 	display: block;
