--- a/demo2/css/demo1.css
+++ b/demo2/css/demo1.css
@@ -630,6 +630,7 @@ and (min-width : 1366px) {
         width: 35% !important;
         height: 4em !important;
         top: 1em !important;
+        background-size: 100%;
     }
     .footerslide2 {
         bottom: 0.6em !important;
@@ -1196,7 +1197,7 @@ and (min-width : 1920px) {
 	}
 	#zajavka2 input {
 		height: 7em !important;
-
+background-size: 100%;
 	}
 	.footerslide2{
 		bottom: 1em !important;
@@ -1236,7 +1237,7 @@ and (min-width : 1920px) {
 	}
 	#zajavka3 input {
 		height: 7em !important;
-
+        background-size: 100%;
 	}
 	.footerslide3{
 		bottom: 3em !important;
@@ -1490,7 +1491,7 @@ and (min-width : 1920px) {
 		margin: 0 auto;
 		position: relative;
 	}
-    #zajavka7 input {
+    #zajavka7 input:hover {
         width: 60% !important;
         height: 5em !important;
     }
